--- a/teaching/s2021_geom1.html
+++ b/teaching/s2021_geom1.html
@@ -58,6 +58,8 @@
 2020-03-22: In case we still do not meet in classroom by the due date of any homework, you do not have to come to school for only to hand-in your homework. You can either submit electronically or hand-in when we get to meet each other in classroom. As mentioned on syllabus, late homework are accepted equally. Please be aware of and cooperate in <a href="https://en.wikipedia.org/wiki/Social_distancing"  title="Social distancing">social distancing</a>.<br>
 2020-03-22: Those who want a skype discussion session regarding <FONT color="#800080">Assignment for Week 2</FONT>, please write an email to me to set up an appointment.<br>
 -->
+
+2021-04-19: <b>PBL project related:</b> Find relevant details on your PBL project for this course below.<br>
 2021-04-11: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>
 2021-04-11: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>
 2021-03-21: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>
@@ -181,6 +183,14 @@ Here are <a href="f2019_geom2/final.pdf"  title="Open final Exam">Problems</a> a
 - If you think you did not get a final grade you deserve, you are welcome to dispute. Please remember that the correction request has to be filed no later that 30 December 2019.<br>
 <br>-->
 
+ 
+<h2><p>Assessment of Project-Based Learning (PBL)</p></h2>
+As announced in the syllabus, you must record a 20-minute long video lecture about one of the following:<br>
+(1) A sample lecture on any topic listed on the syllabus of this course.<br>
+(2) A sample lecture on a concept from secondary school geometry curricular.<br><br>
+You should submit the video in a form of a YouTube video link by choosing the sharing option "unlisted." Please use <a href="https://forms.gle/5uYjZNvJsMrEoQPd8" title="A Google form to hand-in your work">this form</a> to submit your work.<br><br>
+  
+Your video will be disclosed to your classmates in this course as a part of a YouTube playlist. You may turn your video into “private” or even delete the video after your letter grade for this course is assigned.<br><br> 
 
 <!--
 <h2><p>Group activity</p></h2>
