--- a/teaching/s2021_geom1.html
+++ b/teaching/s2021_geom1.html
@@ -59,6 +59,9 @@
 2020-03-22: Those who want a skype discussion session regarding <FONT color="#800080">Assignment for Week 2</FONT>, please write an email to me to set up an appointment.<br>
 -->
 
+2021-04-26: <FONT COLOR="red">Homework #11</FONT> has been posted below.<br> 
+2021-04-26: <FONT COLOR="red">Homework #10</FONT> has been posted below.<br> 
+2021-04-26: <FONT COLOR="red">Homework #9</FONT> has been posted below.<br> 
 2021-04-19: <b>PBL project related:</b> Find relevant details on your PBL project for this course below.<br>
 2021-04-11: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>
 2021-04-11: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>
@@ -127,22 +130,23 @@ Exercises in p.93 #1, 2, 3<br>
 Exercises in p.97 #2, 3, 4<br>
 Exercises in p.97 (bottom) #1, 2, 3<br>
 Exercises in p.100 #2, 3<br><br> 
- 
- 
- <!--
-<b>Homework  #9</b> 7 problems. Due Date: May 26th.<br>
+
+<b>Homework  #9</b> 7 problems. Due Date: May 9th.<br>
 Exercises in p.102 #1<br>
 Exercises in p.103 #1, 2<br>
 Exercises in p.108 #1, 2, 3, 4<br><br>
 
-<b>Homework  #10</b> 8 problems. Due Date: June 2nd.<br>
+<b>Homework  #10</b> 8 problems. Due Date: May 16th.<br>
 Exercises in p.113 #1, 2, 3, 4<br>
 Exercises in p.116 #1, 2, 3, 4<br><br>
 
-<b>Homework  #11</b> 10 problems. Due Date: June 9th.<br>
+<b>Homework  #11</b> 10 problems. Due Date: May 23rd.<br>
 Exercises in p.123 #1, 2, 3<br>
 Exercises in p.128 #1, 2, 3<br>
 Exercises in p.129 #1, 2, 3, 4<br><br>
+
+ 
+ <!--
 
 <b>Homework  #12</b> 10 problems. Due Date: June 16th.<br>
 Exercises in p.133 #1, 2<br>
