--- a/teaching/s2021_dg1.html
+++ b/teaching/s2021_dg1.html
@@ -45,6 +45,8 @@
 2020-04-13: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
 2020-04-09: Youtube videos Sessions 4 to 11 are now available. Find links for video recordings from CBNU eCampus.<br>
 -->
+2021-04-26: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>  
+2021-04-26: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>    
 2021-04-19: <b>PBL project related:</b> Find relevant details on your PBL project for this course below.<br>
 2021-04-05: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>  
 2021-04-05: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>
@@ -79,16 +81,18 @@ Problems from the National Exam: <a href="s2021_dg1/hw5.pdf" title="Selected pro
 Problems from Chapter 5 (Part 3): #22, 23, 24, 33<br>
 Problems from the National Exam: <a href="s2021_dg1/hw6.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
 
+<b>Homework  #7</b>  11 problems. Due Date: May 9th.<br>
+Problems from Chapter 7 (Part 1): #2, 3, 4, 8, 15<br>
+Problems from the National Exam: <a href="s2021_dg1/hw7.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
+  
+<b>Homework  #8</b>  11 problems. Due Date: May 16th.<br>
+Problems from Chapter 7 (Part 2): #12, 14, 19, 21, 23, 28, 29<br>
+Problems from the National Exam: <a href="s2021_dg1/hw8.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
   
 <!-- 
 
-<b>Homework  #7</b>  11 problems. Due Date: May 28th.<br>
-Problems from Chapter 7 (Part 1): #2, 3, 4, 8, 15<br>
-Problems from the National Exam: <a href="s2021_dg1/hw7.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
 
-<b>Homework  #8</b>  11 problems. Due Date: June 4th.<br>
-Problems from Chapter 7 (Part 2): #12, 14, 19, 21, 23, 28, 29<br>
-Problems from the National Exam: <a href="s2021_dg1/hw8.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
+
 
 <b>Homework  #9</b>  12 problems. Due Date: June 11th.<br>
 Problems from Serge Lang, Linear Algebra, 3rd Ed. p.131 Exercise #6<br>
