--- a/teaching/s2021_cv1.html
+++ b/teaching/s2021_cv1.html
@@ -62,12 +62,13 @@ Chapter 4, Exercises in p.56: 5, 6, 7, 8, 9, 10, 11, 12.<br>
 Chapter 5, Exercises in p.74: 4, 5, 6, 7, 8, 9, 10, 14, 15, 19.<br>
 <br> 
 
+<b>Homework  #6</b> 9 problems. Due Date: Before the final exam.<br>
+Chapter 6, Exercises in p.90: 1, 4, 5, 6, 7, 8, 10, 12, 13.<br>
+<br>
+
+ 
 <!-- 
 
-
-<b>Homework  #5</b> 13 problems. Due Date: November 22nd.<br>
-Problems from Chapter 9 Part 5: #26, 27, 45, 46, 47, 52, 55.<br>
-Problems from Chapter 10: #3, 8, 9, 10, 30, 38.<br><br>
 
 <b>Homework  #6</b> 7 problems. Due Date: Before the final exam.<br>
 Problems from Chapter 11: #8, 10, 30, 32, 33, 54, 55.<br><br>
