--- a/teaching/s2021_cv1.html
+++ b/teaching/s2021_cv1.html
@@ -62,7 +62,7 @@ Chapter 4, Exercises in p.56: 5, 6, 7, 8, 9, 10, 11, 12.<br>
 Chapter 5, Exercises in p.74: 4, 5, 6, 7, 8, 9, 10, 14, 15, 19.<br>
 <br> 
 
-<b>Homework  #6</b> 9 problems. Due Date: Before the final exam.<br>
+<b>Homework  #6</b> 9 problems. Due Date: May 16th.<br>
 Chapter 6, Exercises in p.90: 1, 4, 5, 6, 7, 8, 10, 12, 13.<br>
 <br>
 
