--- a/teaching/s2021_geom1.html
+++ b/teaching/s2021_geom1.html
@@ -58,7 +58,8 @@
 2020-03-22: In case we still do not meet in classroom by the due date of any homework, you do not have to come to school for only to hand-in your homework. You can either submit electronically or hand-in when we get to meet each other in classroom. As mentioned on syllabus, late homework are accepted equally. Please be aware of and cooperate in <a href="https://en.wikipedia.org/wiki/Social_distancing"  title="Social distancing">social distancing</a>.<br>
 2020-03-22: Those who want a skype discussion session regarding <FONT color="#800080">Assignment for Week 2</FONT>, please write an email to me to set up an appointment.<br>
 -->
-
+2021-05-14: <FONT COLOR="red">Homework #13</FONT> has been posted below.<br> 
+2021-05-14: <FONT COLOR="red">Homework #12</FONT> has been posted below.<br> 
 2021-04-26: <FONT COLOR="red">Homework #11</FONT> has been posted below.<br> 
 2021-04-26: <FONT COLOR="red">Homework #10</FONT> has been posted below.<br> 
 2021-04-26: <FONT COLOR="red">Homework #9</FONT> has been posted below.<br> 
@@ -145,16 +146,13 @@ Exercises in p.123 #1, 2, 3<br>
 Exercises in p.128 #1, 2, 3<br>
 Exercises in p.129 #1, 2, 3, 4<br><br>
 
- 
- <!--
-
-<b>Homework  #12</b> 10 problems. Due Date: June 16th.<br>
+<b>Homework  #12</b> 10 problems. Due Date: May 30th.<br>
 Exercises in p.133 #1, 2<br>
 Exercises in p.135 #1, 2<br>
 Exercises in p.137 #1, 2, 3<br>
 Exercises in p.138 #1, 2, 3<br><br>
 
-<b>Homework  #13</b> 12 problems. Due Date: June 22nd.<br>
+<b>Homework  #13</b> 12 problems. Due Date: June 6th.<br>
 Exercises in p.141 #1, 3<br>
 Exercises in p.142 #1, 2<br>
 Exercises in p.143 #2, 3<br>
@@ -165,8 +163,6 @@ Exercises in p.148 #1, 3<br><br>
 <b>Homework  #14</b> 5 problems. No need to hand-in (not counted toward Homework score).<br>
 Exercises in p.184 #1, 2, 3<br>
 Exercises in p.187 #1, 3<br><br>
-
--->
 
 <!-- confirmed below
 
