--- a/teaching/s2021_cv1.html
+++ b/teaching/s2021_cv1.html
@@ -32,6 +32,7 @@
 2020-09-07: Due to a technical glitch on my recording device, the second video for Session 4 does not have any voice. I shall fix this problem by tomorrow September 8th 15:00 and your attendance due for this week will be extended for 24 hours.  <br>
 2020-09-03: If you have any issue with CBNU eCampus online attendance system, please report that to me by email by September 5th 18:00.<br>
 -->
+2021-05-14: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>
 2021-04-29: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>
 2021-04-19: <b>PBL project related:</b> Find relevant details on your PBL project for this course below.<br>
 2021-04-12: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>
@@ -67,6 +68,9 @@ Chapter 5, Exercises in p.74: 4, 5, 6, 7, 8, 9, 10, 14, 15, 19.<br>
 Chapter 6, Exercises in p.90: 1, 4, 5, 6, 7, 8, 10, 12, 13.<br>
 <br>
 
+<b>Homework  #7</b> 11 problems. Due Date: June 6th.<br>
+Chapter 7, Exercises in p.104: 4, 5, 8, 9, 12, 13, 14, 16, 17, 19, 20.<br>
+<br>
  
 <!-- 
 
