--- a/teaching/s2021_dg1.html
+++ b/teaching/s2021_dg1.html
@@ -88,16 +88,16 @@ Problems from the National Exam: <a href="s2021_dg1/hw7.pdf" title="Selected pro
 <b>Homework  #8</b>  11 problems. Due Date: May 16th.<br>
 Problems from Chapter 7 (Part 2): #12, 14, 19, 21, 23, 28, 29<br>
 Problems from the National Exam: <a href="s2021_dg1/hw8.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
+
+<b>Homework  #9</b>  12 problems. Due Date: May 23th.<br>
+Problems from Serge Lang, Linear Algebra, 3rd Ed. p.131 Exercise #6<br>
+Problems from M. P. do Carmo, Differential forms and applications, p.10 Exercise #1, 2, 5, 7, 10<br>
+Problems from the National Exam: <a href="s2021_dg1/hw9.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
+  
   
 <!-- 
 
-
-
-
-<b>Homework  #9</b>  12 problems. Due Date: June 11th.<br>
-Problems from Serge Lang, Linear Algebra, 3rd Ed. p.131 Exercise #6<br>
-Problems from M. P. do Carmo, Differential forms and applications, p.10 Exercise #1, 2, 5, 7, 10<br>
-Problems from the National Exam: <a href="s2021_dg1/hw9.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>-->
+-->
 
 <!-- HW9 about this week's exercises <br> -->
 
