--- a/teaching/s2021_dg1.html
+++ b/teaching/s2021_dg1.html
@@ -45,6 +45,7 @@
 2020-04-13: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
 2020-04-09: Youtube videos Sessions 4 to 11 are now available. Find links for video recordings from CBNU eCampus.<br>
 -->
+2021-05-14: <FONT COLOR="red">Homework #9</FONT> has been posted below.<br>  
 2021-04-26: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>  
 2021-04-26: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>    
 2021-04-19: <b>PBL project related:</b> Find relevant details on your PBL project for this course below.<br>
@@ -93,7 +94,13 @@ Problems from the National Exam: <a href="s2021_dg1/hw8.pdf" title="Selected pro
 Problems from Serge Lang, Linear Algebra, 3rd Ed. p.131 Exercise #6<br>
 Problems from M. P. do Carmo, Differential forms and applications, p.10 Exercise #1, 2, 5, 7, 10<br>
 Problems from the National Exam: <a href="s2021_dg1/hw9.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
-  
+
+<b>Homework  #10</b>  12 problems. Due Date: June 6th.<br>
+Problems from Marsden and Tromba, Vector Calculus, p.182 Exercise #1, 5, 18, 22, 29, 31<br>
+Problems from O'Neill, Elementary Differential Geometry, p.106 Exercise #2, 7, 8<br>
+Problems from O'Neill, Elementary Differential Geometry, p.110 Exercise #2, 4<br>
+Problems from O'Neill, Elementary Differential Geometry, p.120 Exercise #4<br><br>
+
   
 <!-- 
 
@@ -102,11 +109,6 @@ Problems from the National Exam: <a href="s2021_dg1/hw9.pdf" title="Selected pro
 <!-- HW9 about this week's exercises <br> -->
 
 <!--
-<b>Homework  #10</b>  12 problems. Due Date: June 19th.<br>
-Problems from Marsden and Tromba, Vector Calculus, p.182 Exercise #1, 5, 18, 22, 29, 31<br>
-Problems from O'Neill, Elementary Differential Geometry, p.106 Exercise #2, 7, 8<br>
-Problems from O'Neill, Elementary Differential Geometry, p.110 Exercise #2, 4<br>
-Problems from O'Neill, Elementary Differential Geometry, p.120 Exercise #4<br><br>
 -->
 
 
