--- a/teaching/s2021_geom1.html
+++ b/teaching/s2021_geom1.html
@@ -58,6 +58,7 @@
 2020-03-22: In case we still do not meet in classroom by the due date of any homework, you do not have to come to school for only to hand-in your homework. You can either submit electronically or hand-in when we get to meet each other in classroom. As mentioned on syllabus, late homework are accepted equally. Please be aware of and cooperate in <a href="https://en.wikipedia.org/wiki/Social_distancing"  title="Social distancing">social distancing</a>.<br>
 2020-03-22: Those who want a skype discussion session regarding <FONT color="#800080">Assignment for Week 2</FONT>, please write an email to me to set up an appointment.<br>
 -->
+2021-05-25: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br> 
 2021-05-14: <FONT COLOR="red">Homework #14</FONT> has been posted below. This one is for your practice and you do not have to hand it in. It does not get counted toward your credit.<br> 
 2021-05-14: <FONT COLOR="red">Homework #13</FONT> has been posted below.<br> 
 2021-05-14: <FONT COLOR="red">Homework #12</FONT> has been posted below.<br> 
@@ -174,12 +175,12 @@ Exercises in p.187 #1, 3<br><br>
 
 
 <h2><p>Exam Schedules</p></h2>
-Final Exam: TBA. <!-- <FONT COLOR="#C40062">22 June (Monday)</FONT> at E1-2 Room 306, 15:00--16:50. (If you arrive early, please wait at E1-1 Room 140.)<br>
+Final Exam: <FONT COLOR="#C40062">08 June (Tuesday)</FONT> at E1-2 Room 306, 14:00--15:40.<br>
 - Coverage: All sections of the main textbook we have covered in this semester.<br>
-- Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect.), 3 questions which are identical or directly related to homework problems, and remaining 4 questions are from those theories and examples discussed in class. This exam would gear toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
-The average was 61.14, standard deviation 19.26, and the maximum score achieved by a student 86.<br> -->
+- Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect.), 4 questions which are identical or directly related to homework problems, and remaining 3 questions are from those theories and examples discussed in class. This exam would gear toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
 
-<!--
+
+<!--   The average was 61.14, standard deviation 19.26, and the maximum score achieved by a student 86.<br>
 Here are <a href="f2019_geom2/final.pdf"  title="Open final Exam">Problems</a> and <a href="f2019_geom2/finalsol.pdf"  title="Open Final Exam Solution">Solutions</a>. The average was 58.57 and the maximum score achieved by a student was 90.<br>
 - If you think you did not get a final grade you deserve, you are welcome to dispute. Please remember that the correction request has to be filed no later that 30 December 2019.<br>
 <br>-->
