--- a/teaching/s2021_cv1.html
+++ b/teaching/s2021_cv1.html
@@ -32,6 +32,8 @@
 2020-09-07: Due to a technical glitch on my recording device, the second video for Session 4 does not have any voice. I shall fix this problem by tomorrow September 8th 15:00 and your attendance due for this week will be extended for 24 hours.  <br>
 2020-09-03: If you have any issue with CBNU eCampus online attendance system, please report that to me by email by September 5th 18:00.<br>
 -->
+2021-05-27: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br> 
+2021-05-27: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>
 2021-05-14: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>
 2021-04-29: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>
 2021-04-19: <b>PBL project related:</b> Find relevant details on your PBL project for this course below.<br>
@@ -72,6 +74,10 @@ Chapter 6, Exercises in p.90: 1, 4, 5, 6, 7, 8, 10, 12, 13.<br>
 Chapter 7, Exercises in p.104: 4, 5, 8, 9, 12, 13, 14, 16, 17, 19, 20.<br>
 <br>
  
+<b>Homework  #8</b> 4 problems. No need to hand-in (not counted toward your total score).<br>
+Chapter 8, Exercises in p.116: 1, 4, 5, 7.<br>
+<br>
+ 
 <!-- 
 
 
@@ -101,9 +107,11 @@ Here are problems from Chapter 10: <a href="f2019_dg2/ch10prob.pdf" title="Chapt
 
 
 <h2><p>Exam Schedules</p></h2>
-Final Exam: TBA.<!-- <FONT COLOR="#C40062">07 December (Monday),</FONT> at N-7 Room 308, 15:00--16:40.<br>
-- Coverage: Chapters 8, 9, 10, and 11. In Chapters 10 and 11, only those sections we covered in class will be included to the coverage.<br>
-- Total 6 questions. There will be one True/False question (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect.) and some questions will be identical to old National Exam problems.<br><br> -->
+Final Exam: <FONT COLOR="#C40062">10 June (Thursday),</FONT> at E1-2 Room 306, 10:00--11:40.<br>
+- Coverage: Chapters 1 to 8 (section 8.2 excluded).<br>
+- Total 8 questions. There will be one True/False question (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect.)<br><br>
+ 
+<!--  -->
 
 
 
