--- a/teaching/s2021_cv1.html
+++ b/teaching/s2021_cv1.html
@@ -107,7 +107,7 @@ Here are problems from Chapter 10: <a href="f2019_dg2/ch10prob.pdf" title="Chapt
 
 
 <h2><p>Exam Schedules</p></h2>
-Final Exam: <FONT COLOR="#C40062">10 June (Thursday),</FONT> at E1-2 Room 306, 10:00--11:40.<br>
+Final Exam: <FONT COLOR="#C40062">10 June (Thursday), 10:00--11:40</FONT> at E1-2 Room 306.<br>
 - Coverage: Chapters 1 to 8 (section 8.2 excluded).<br>
 - Total 8 questions. There will be one True/False question (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect.)<br><br>
  
