--- a/teaching/s2021_dg1.html
+++ b/teaching/s2021_dg1.html
@@ -122,7 +122,7 @@ Problems from O'Neill, Elementary Differential Geometry, p.120 Exercise #4<br><b
 <h2><p>Exam Schedules</p></h2>
 Final Exam: <FONT COLOR="#C40062">10 June (Thursday) 14:00--15:40</FONT> at E1-2 Room 306. <br>
 - Coverage: Chapters 3, 4, 5, and 7 of the main textbook and provided references (available on the e-Campus).<br>
-- Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect.) This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
+- Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
 
 <!--  <FONT COLOR="#C40062">23 June (Tuesday)</FONT> at E1-2 Room 306, 15:00--16:50. (If you arrive early, please wait at E1-1 Room 140.)<br>
 - Coverage: Chapters 3, 4, 5, and 7 of the main textbook and provided references (available on the e-Campus).<br>
