--- a/teaching/s2021_dg1.html
+++ b/teaching/s2021_dg1.html
@@ -45,6 +45,7 @@
 2020-04-13: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
 2020-04-09: Youtube videos Sessions 4 to 11 are now available. Find links for video recordings from CBNU eCampus.<br>
 -->
+2021-06-21: Letter grades have been submitted. Enjoy your summer break.<br>  
 2021-05-27: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br>  
 2021-05-14: <FONT COLOR="red">Homework #10</FONT> has been posted below.<br>    
 2021-05-14: <FONT COLOR="red">Homework #9</FONT> has been posted below.<br>  
