--- a/teaching/s2021_geom1.html
+++ b/teaching/s2021_geom1.html
@@ -58,6 +58,7 @@
 2020-03-22: In case we still do not meet in classroom by the due date of any homework, you do not have to come to school for only to hand-in your homework. You can either submit electronically or hand-in when we get to meet each other in classroom. As mentioned on syllabus, late homework are accepted equally. Please be aware of and cooperate in <a href="https://en.wikipedia.org/wiki/Social_distancing"  title="Social distancing">social distancing</a>.<br>
 2020-03-22: Those who want a skype discussion session regarding <FONT color="#800080">Assignment for Week 2</FONT>, please write an email to me to set up an appointment.<br>
 -->
+2021-06-21: Letter grades have been submitted. Enjoy your summer break.<br>
 2021-05-25: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br> 
 2021-05-14: <FONT COLOR="red">Homework #14</FONT> has been posted below. This one is for your practice and you do not have to hand it in. It does not get counted toward your credit.<br> 
 2021-05-14: <FONT COLOR="red">Homework #13</FONT> has been posted below.<br> 
