--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@ Here is my <a href="CV_Park.pdf">CV</a>. My research is supported by the <a href
 
 <h2><p>Publications and preprints</p></h2>
 <ul>
+  <li>Noncommutative differential K-theory, with <a href="https://arthurparzygnat.com/">Arthur J. Parzygnat</a>, <a href="http://myweb.liu.edu/~dredden/">Corbett Redden</a>, and <a href="https://math-inf.uni-greifswald.de/en/department/about-us/employees/augusto-stoffel/">Augusto Stoffel</a>. <a href="http://arxiv.org/abs/2106.12073">ArXiv</a></li>
   <li>Brown representability for directed graphs, with <a href="https://mathscinet.ams.org/mathscinet/MRAuthorID/1255865">Zachary McGuirk</a>. <a href="http://arxiv.org/abs/2003.07426">ArXiv</a></li>
-  <li>Noncommutative differential K-theory, with <a href="https://arthur-parzygnat.uconn.edu/">Arthur J. Parzygnat</a>, <a href="http://myweb.liu.edu/~dredden/">Corbett Redden</a>, and <a href="https://math-inf.uni-greifswald.de/en/department/about-us/employees/augusto-stoffel/">Augusto Stoffel</a>.</li>
   <li>A classification of equivariant gerbe connections, with <a href="http://myweb.liu.edu/~dredden/">Corbett Redden</a>, <a href="https://doi.org/10.1142/S0219199718500013"><em>Commun.
 Contemp. Math.</a></em> <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/abs/1709.06003">ArXiv</a></li>
   <li>Geometric models of twisted differential K-theory I, <em><a href="https://link.springer.com/article/10.1007%2Fs40062-017-0177-z">J. Homotopy and Relat. Struct.</a></em>, <b>13</b>(1) (2018) 143--167. <a href="http://arxiv.org/abs/1602.02292">ArXiv</a></li>
@@ -200,7 +200,7 @@ Contemp. Math.</a></em> <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/abs
 <!--
 <a href="4214-06/4214-06.html">4214-06</a><br><br>-->
 
-Last Updated: 23 February 2021
+Last Updated: 24 June 2021
 
 </font>
 </body>
