--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Previously, I was a Research Fellow (Postdoc) at the <a href="http://www.kias.re
 
 Here is my <a href="CV_Park.pdf">CV</a>. My research is supported by the <a href="https://www.nrf.re.kr/eng/index">National Research Foundation</a> funded by the <a href="https://www.msit.go.kr/english/main/main.do">Ministry of Science and ICT</a>, Republic of Korea.<br><br>
 <b>Address:</b> Department of Mathematics Education, Chungbuk National University, 1 Chungdaero Seowon-Gu, Cheongju 28644, Republic of Korea<br><br>
-<b>Office:</b> E1-1 Room 110 (Due to construction I will be at N7 Room 119 for the period 28 August -- 31 December 2020.)<br><br>
+<b>Office:</b> E1-1 Room 110<br><br>
 <b>Phone:</b> +82-43-261-2721<br><br>
 
 <!--  I am an Adjunct Assistant Professor at <a href="http://www.hunter.cuny.edu/">CUNY Hunter College</a> and <a href="http://www.bcc.cuny.edu/">CUNY Bronx Community College</a> in New York City.<br><br> -->
