--- a/teaching/s2021_tig1.html
+++ b/teaching/s2021_tig1.html
@@ -24,6 +24,9 @@
 2020-08-06: Letter grades have been submitted. Enjoy your summer.<br>
 2020-07-15: Welcome again! Starting tomorrow, Youtube video lectures, problem sets, quizzes will be posted on <a href="https://cbnu.blackboard.com/"  title="Open CBNU eCampus">CBNU eCampus</a> at 13:00 on every class meeting day, and the quiz for that day is due in 20 hours. Also, please check your email detailing attendance policies and other important announcements.<br>
 -->
+2021-07-29: Please see the email or the eCampus announcement on a remote final exam.<br>
+2021-07-23: Please see the email or the eCampus announcement on your PBL project.<br>
+2021-07-15: Welcome again! Youtube video lectures, problem sets, quizzes will be posted on <a href="https://cbnu.blackboard.com/"  title="Open CBNU eCampus">CBNU eCampus</a>.<br>
 2021-03-01: Welcome! Our first day of class is July 16th. Video lectures will be ready earlier than that and you will be informed by email.<br>
 
 
@@ -48,8 +51,8 @@ For Problems and Solutions to Weekly Quizzes, go to <a href="https://cbnu.blackb
 
 
 <h2><p>Exam Schedules</p></h2>
-Final Exam: <FONT COLOR="#C40062">04 August (Wednesday)</FONT> at E1-1 Room 306, 15:00--17:50.<br>
-- Coverage: All sections of the main textbook we have covered in this semester.<br>
+Final Exam: <FONT COLOR="#C40062">04 August (Wednesday)</FONT> at 16:00--17:40 taking place remotely. Submit your work by 18:00 either in-person to the instructor's office or by email. You are asked to hand-in a consent by email in prior to the exam. Please see the email or the eCampus announcement and the attached file.<br>
+- Coverage: All problems we have covered in this semester.<br>
 - Total 6 questions will be asked. <br>
 <!-- The average was 61.14, standard deviation 19.26, and the maximum score achieved by a student 86.<br> -->
 
