--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Contemp. Math.</a></em> <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/abs
 <h2><p>Teaching</p></h2>
 <dl>
 <dd><a href="teaching/s2021_tig1.html">Topics in Geometry I</a> (Graduate Course)</dd>
-<dd><a href="teaching/f2021_ge.html">Geometry and Education</a></dd>
+<dd><a href="teaching/f2021_fom2.html">Foundation of Mathematics II</a> (Graduate Course)</dd>
 <dd><a href="teaching/f2021_dg2.html">Differential Geometry II</a></dd>
 <dd><a href="teaching/f2021_cv2.html">Complex Analysis II</a></dd>
 </dl>
