--- a/index.html
+++ b/index.html
@@ -154,6 +154,10 @@ Contemp. Math.</a></em> <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/abs
 
 <h2><p>Seminars</p></h2>
 <dl>
+<dd><a href="seminars/geometry.html">Geometry Seminar</a></dd>
+</dl>
+
+<dl>
 <dd><a href="seminars/pastseminars.html">Past seminars</a></dd>
 </dl>
 
