--- a/seminars/geometry.html
+++ b/seminars/geometry.html
@@ -16,7 +16,7 @@
 <body>
 <h1><p>Geometry Seminar</p></h1>
 
-<img src="geometrymain.jpg" width="512" height="384"><br>
+<img src="../images/geometrymain.jpg" width="512" height="384"><br>
     
     
 <h2><p>About</p></h2>
