--- a/index.html
+++ b/index.html
@@ -153,13 +153,13 @@ Contemp. Math.</a></em> <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/abs
 -->
 
 <h2><p>Seminars</p></h2>
-<ul>
-  <li><a href="seminars/geometry.html">Geometry Seminar</a> at CBNU</li>
-</ul>
-
 <dl>
-<dd><a href="seminars/pastseminars.html">Past seminars</a></dd>
+<dd><a href="seminars/geometry.html">Geometry Seminar</a> at CBNU</dd>
 </dl>
+
+<ul>
+  <li><a href="seminars/pastseminars.html">Past seminars</a></li>
+</ul>
 
 
 
