--- a/teaching/f2021_cv2.html
+++ b/teaching/f2021_cv2.html
@@ -44,19 +44,20 @@
 2021-03-22: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2021-03-09: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
-
+2021-09-12: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2021-09-01: Welcome!<br>
 
 
 <h2><p>Homework</p></h2>
-<b>Homework  #1</b> TBA.<br>
+<b>Homework  #1</b> 10 problems. Due Date: September 26th.<br>
+Chapter 8, Exercises in p.116: #8.<br>
+Chapter 9, Exercises in p.126: #1, 2, 3, 4, 6, 9, 10, 11, 16.<br>
+<br>
+
 
  
 <!--
 
-<b>Homework  #1</b> 10 problems. Due Date: March 28th.<br>
-Chapter 1, Exercises in p.18: #5, 8, 10, 13, 14, 16, 20, 21, 23, 25.<br>
-<br>
  
 <b>Homework  #2</b> 8 problems. Due Date: April 4th.<br>
 Chapter 2, Exercises in p.32: #2, 4, 9, 10, 12, 13, 14, 20.<br>
