--- a/teaching/f2021_cv2.html
+++ b/teaching/f2021_cv2.html
@@ -45,8 +45,11 @@
 2021-03-09: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
 2021-09-12: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
+2021-09-05: Here is the criterion for an attendance approval: The learning time must be greater than or equal to the minimum of 50 minutes and the total length of video lectures for that session. Please read the email announcement for more details.<br>  
+2021-09-03: Since eCampus Kaltura system does not show due dates for attendance, please see this <a href="https://docs.google.com/spreadsheets/d/1VuGJYka9MWL5MQrfx2VDmZ1H3ud3QFkYT2jBuJ4fllw/edit?usp=sharing">sheet</a> for the information.<br>
+2021-09-01: Here is an <a href="https://forms.gle/1WvCdyNJ56gHBa6a8">online form</a> for reporting issues and filing objections to the eCampus attendance checking system.<br>
 2021-09-01: Welcome!<br>
-
+ 
 
 <h2><p>Homework</p></h2>
 <b>Homework  #1</b> 10 problems. Due Date: September 26th.<br>
