--- a/teaching/f2021_cv2.html
+++ b/teaching/f2021_cv2.html
@@ -41,9 +41,8 @@
 2021-04-12: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>
 2021-04-05: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
 2021-03-29: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
-2021-03-22: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
-2021-03-09: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2021-09-27: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2021-09-12: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2021-09-05: Here is the criterion for an attendance approval: The learning time must be greater than or equal to the minimum of 50 minutes and the total length of video lectures for that session. Please read the email announcement for more details.<br>  
 2021-09-03: Since eCampus Kaltura system does not show due dates for attendance, please see this <a href="https://docs.google.com/spreadsheets/d/1VuGJYka9MWL5MQrfx2VDmZ1H3ud3QFkYT2jBuJ4fllw/edit?usp=sharing">sheet</a> for the information.<br>
@@ -56,7 +55,10 @@
 Chapter 8, Exercises in p.116: #8.<br>
 Chapter 9, Exercises in p.126: #1, 2, 3, 4, 6, 9, 10, 11, 16.<br>
 <br>
-
+ 
+<b>Homework  #2</b> 7 problems. Due Date: October 10th.<br>
+Chapter 10, Exercises in p.141: #1, 2, 3, 8, 9, 11, 14.<br>
+<br>
 
  
 <!--
