--- a/teaching/f2021_dg2.html
+++ b/teaching/f2021_dg2.html
@@ -15,7 +15,7 @@
 <font size="4" >
 <b>Instructor:</b> Dr. Byungdo Park &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Email:</b> <img src="../images/eml_chungbuk.jpg" width="337" height="62"><br>
 <b>Office Hours:</b> Thursdays 17:00--17:50 at E1-1 #110 or by appointment.<br>
-<b>Syllabus:</b>  <a href="f2020_dg2/courseoutline.pdf" title="Open Course Outline">PDF</a><br>
+<b>Syllabus:</b>  <a href="f2021_dg2/courseoutline.pdf" title="Open Course Outline">PDF</a><br>
 
 
 <h2><p>Announcements</p></h2>
@@ -55,6 +55,7 @@
 
 
 -->
+2020-09-27: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br> 
 2021-09-12: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2021-09-05: Here is the criterion for an attendance approval: The learning time must be greater than or equal to the minimum of 50 minutes and the total length of video lectures for that session. Please read the email announcement for more details.<br>  
 2021-09-03: Since eCampus Kaltura system does not show due dates for attendance, please see this <a href="https://docs.google.com/spreadsheets/d/1VuGJYka9MWL5MQrfx2VDmZ1H3ud3QFkYT2jBuJ4fllw/edit?usp=sharing">sheet</a> for the information.<br>
@@ -68,18 +69,15 @@ Unless otherwise stated, problem numbers below refer to Solved Problems and Supp
 <b>Homework  #1</b> 10 problems. Due Date: September 26th.<br>
 Problems from Chapter 8 Part 1: #4, 5, 6, 8, 10 <a href="f2021_dg2/hw1no10addendum.pdf" title="Open addendum to Problem 8.10">(Addendum)</a>, 24, 26, 28, 29 <a href="f2021_dg2/hw1no29sol.pdf" title="Open Solutions to Problem 8.29">(Solution)</a>, 32.<br><br>
 
+<b>Homework  #2</b> 10 problems. Due Date: October 10th.<br>
+Problems from Chapter 8 Part 2: #17, 19(a), 30, 33, 34, 38.<br>
+Problems from Chapter 9 Part 1: #1, 2, 4, 6<br>
+<br> 
+ 
 <!--
 
 
 
-
-<b>Homework  #1</b> 10 problems. Due Date: September 28th.<br>
-Problems from Chapter 8 Part 1: #4, 5, 6, 8, 10 <a href="f2020_dg2/hw1no10addendum.pdf" title="Open addendum to Problem 8.10">(Addendum)</a>, 24, 26, 28, 29 <a href="f2020_dg2/hw1no29sol.pdf" title="Open Solutions to Problem 8.29">(Solution)</a>, 32.<br><br>
-
-<b>Homework  #2</b> 10 problems. Due Date: October 5th.<br>
-Problems from Chapter 8 Part 2: #17, 19(a), 30, 33, 34, 38.<br>
-Problems from Chapter 9 Part 1: #1, 2, 4, 6<br>
-<br>
 
 <b>Homework  #3</b> 12 problems. Due Date: October 16th.<br>
 Problems from Chapter 9 Part 2: #33, 34, 35, 37, 38, 40.<br>
