--- a/teaching/f2021_fom2.html
+++ b/teaching/f2021_fom2.html
@@ -15,7 +15,7 @@
 <font size="4" >
 <b>Instructor:</b> Dr. Byungdo Park &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Email:</b> <img src="../images/eml_chungbuk.jpg" width="337" height="62"><br>
 <b>Office Hours:</b> Thursdays 17:00--17:50 at E1-1 #110 or by appointment.<br>
-<b>Syllabus:</b>  <a href="f2020_ge/courseoutline.pdf" title="Open Course Outline">PDF</a><br>
+<b>Syllabus:</b>  <a href="f2021_fom/courseoutline.pdf" title="Open Course Outline">PDF</a><br>
 
 
 <h2><p>Announcements</p></h2>
