--- a/teaching/f2021_fom2.html
+++ b/teaching/f2021_fom2.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title> Geometry and education</title>
+<title> Foundation of Mathematics II</title>
 </head>
 <font face="Times New Roman">
 <body>
