--- a/teaching/f2021_cv2.html
+++ b/teaching/f2021_cv2.html
@@ -61,7 +61,9 @@ Chapter 10, Exercises in p.141: #1, 2, 3, 8, 9, 11, 14.<br>
 <br>
 
  
-<!--
+<!--CV 3 / 0 Fill in the details in p.150 line 1. ,1 p158. add 10.16
+4/ 2,3,5,9,13,15,16
+
 
  
 <b>Homework  #2</b> 8 problems. Due Date: April 4th.<br>
