--- a/teaching/f2021_cv2.html
+++ b/teaching/f2021_cv2.html
@@ -42,6 +42,7 @@
 2021-04-05: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
 2021-03-29: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
 -->
+2021-10-02: <FONT COLOR="red">Homework #3</FONT> and <FONT COLOR="red">Homework #4</FONT> have been posted below.<br> 
 2021-09-27: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2021-09-12: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2021-09-05: Here is the criterion for an attendance approval: The learning time must be greater than or equal to the minimum of 50 minutes and the total length of video lectures for that session. Please read the email announcement for more details.<br>  
@@ -60,9 +61,19 @@ Chapter 9, Exercises in p.126: #1, 2, 3, 4, 6, 9, 10, 11, 16.<br>
 Chapter 10, Exercises in p.141: #1, 2, 3, 8, 9, 11, 14.<br>
 <br>
 
+<b>Homework  #3</b> 3 problems. Due Date: October 17th.<br>
+Chapter 10, Exercises in p.141: #16.<br>
+Chapter 11, Exercises in p.158: #1.<br>
+Fill in details in p.150 line 1.<br> 
+<br>
+
+<b>Homework  #4</b> 7 problems. Due Date: October 24th.<br>
+Chapter 11, Exercises in p.158: #2, 3, 5, 9, 13, 15, 16.<br>
+<br>
  
-<!--CV 3 / 0 Fill in the details in p.150 line 1. ,1 p158. add 10.16
-4/ 2,3,5,9,13,15,16
+ 
+ 
+<!--
 
 
  
