--- a/teaching/f2021_dg2.html
+++ b/teaching/f2021_dg2.html
@@ -55,6 +55,7 @@
 
 
 -->
+2021-10-11: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> Details have been posted below.<br> 
 2021-10-02: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>  
 2021-09-27: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br> 
 2021-09-12: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
@@ -117,7 +118,9 @@ Here are problems from Chapter 10: <a href="f2019_dg2/ch10prob.pdf" title="Chapt
 
 
 <h2><p>Exam Schedules</p></h2>
-Midterm Exam: TBA<br>
+Midterm Exam: <FONT COLOR="#C40062">15 November (Monday),</FONT> In-class.<br>
+- Coverage: Chapters 8 and 9.<br>
+- Total 8 questions. There will be a set of true/false questions. At least 4 problems will be identical or closely related to homework problems.<br><br>
 Final Exam: TBA<br>
 
 <!--
