--- a/teaching/f2021_cv2.html
+++ b/teaching/f2021_cv2.html
@@ -42,6 +42,7 @@
 2021-04-05: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
 2021-03-29: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
 -->
+2021-10-11: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> Details have been posted below.<br>
 2021-10-02: <FONT COLOR="red">Homework #3</FONT> and <FONT COLOR="red">Homework #4</FONT> have been posted below.<br> 
 2021-09-27: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2021-09-12: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
@@ -135,8 +136,11 @@ Here are problems from Chapter 10: <a href="f2019_dg2/ch10prob.pdf" title="Chapt
 
 
 <h2><p>Exam Schedules</p></h2>
-Midterm Exam: TBA<br>
+Midterm Exam: <FONT COLOR="#C40062">28 October (Thursday),</FONT> In-class.<br>
+- Coverage: Chapters 8 (only those items covered in this semester), 9, 10, 11.<br>
+- Total 8 questions. There will be a set of true/false questions. At least 4 problems will be identical or closely related to homework problems.<br><br>
 Final Exam: TBA<br>
+
 
 <!--
 Final Exam: <FONT COLOR="#C40062">07 December (Monday),</FONT> at N-7 Room 308, 15:00--16:40.<br>
