--- a/teaching/f2021_dg2.html
+++ b/teaching/f2021_dg2.html
@@ -56,6 +56,7 @@
 
 -->
 2021-10-11: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> Details have been posted below.<br> 
+2021-10-11: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>  
 2021-10-02: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>  
 2021-09-27: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br> 
 2021-09-12: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
@@ -80,7 +81,11 @@ Problems from Chapter 9 Part 1: #1, 2, 4, 6<br>
 Problems from Chapter 9 Part 2: #33, 34, 35, 37, 38, 40.<br>
 Problems from Chapter 9 Part 3: #7, 9, 12, 41, 42, 43.<br>
 <br>
- 
+
+ <b>Homework  #4</b> 11 problems. Due Date: October 31st.<br>
+Problems from Chapter 9 Part 4: #10, 21, 22, 44, 48.<br>
+Problems from the National Exam: <a href="f2021_dg2/nationalexam_ch9.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
+
  
 <!--
 
