--- a/teaching/f2021_cv2.html
+++ b/teaching/f2021_cv2.html
@@ -42,7 +42,7 @@
 2021-04-05: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
 2021-03-29: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
 -->
-2021-10-11: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> Details have been posted below.<br>
+2021-10-11: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> Details have been posted below.<br>
 2021-10-02: <FONT COLOR="red">Homework #3</FONT> and <FONT COLOR="red">Homework #4</FONT> have been posted below.<br> 
 2021-09-27: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2021-09-12: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
