--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Here is my <a href="CV_Park.pdf">CV</a>. My research is supported by the <a href
 
 <h2><p>Publications and preprints</p></h2>
 <ul>
-  <li>A note on Venice lemma in differential K-theory,<em> to appear in Arch. Math.</li>
+  <li>A note on Venice lemma in differential K-theory, to appear in Arch. Math.</li>
   <li>Noncommutative differential K-theory, with <a href="https://arthurparzygnat.com/">Arthur J. Parzygnat</a>, <a href="http://myweb.liu.edu/~dredden/">Corbett Redden</a>, and <a href="https://math-inf.uni-greifswald.de/en/department/about-us/employees/augusto-stoffel/">Augusto Stoffel</a>. <a href="http://arxiv.org/abs/2106.12073">ArXiv</a></li>
   <li>Brown representability for directed graphs, with <a href="https://mathscinet.ams.org/mathscinet/MRAuthorID/1255865">Zachary McGuirk</a>. <a href="http://arxiv.org/abs/2003.07426">ArXiv</a></li>
   <li>A classification of equivariant gerbe connections, with <a href="http://myweb.liu.edu/~dredden/">Corbett Redden</a>, <a href="https://doi.org/10.1142/S0219199718500013"><em>Commun.
