--- a/teaching/f2021_cv2.html
+++ b/teaching/f2021_cv2.html
@@ -42,6 +42,8 @@
 2021-04-05: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
 2021-03-29: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
 -->
+2021-11-07: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br> 
+2021-10-28: See eCampus Week 10 Session 28(2) video for solutions to the midterm exam. The exam problems and solutions are also available.<br>  
 2021-10-20: See eCampus Week 10 Session 28(1) video for some information for the upcoming midterm exam.<br> 
 2021-10-11: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> Details have been posted below.<br>
 2021-10-02: <FONT COLOR="red">Homework #3</FONT> and <FONT COLOR="red">Homework #4</FONT> have been posted below.<br> 
@@ -73,6 +75,11 @@ Fill in details in p.150 line 1.<br>
 Chapter 11, Exercises in p.158: #2, 3, 5, 9, 13, 15, 16.<br>
 <br>
  
+<b>Homework  #5</b> 10 problems. Due Date: November 21st.<br>
+Chapter 12, Exercises in p.167: #2, 4.<br>
+Chapter 13, Exercises in p.192: #3, 9, 11, 12, 13, 14, 15, 16.<br>
+<br>
+
  
  
 <!--
@@ -139,7 +146,12 @@ Here are problems from Chapter 10: <a href="f2019_dg2/ch10prob.pdf" title="Chapt
 <h2><p>Exam Schedules</p></h2>
 Midterm Exam: <FONT COLOR="#C40062">28 October (Thursday),</FONT> In-class.<br>
 - Coverage: Chapters 8 (only those items covered in this semester), 9, 10, 11. Also those relevant old exam problems from the National Exam.<br>
-- Total 8 questions. There will be a set of true/false questions. At least 4 problems will be identical or closely related to homework problems.<br><br>
+- Total 8 questions. There will be a set of true/false questions. At least 4 problems will be identical or closely related to homework problems.<br>
+- Here is the <a href="f2021_cv2/midterm.pdf"  title="Open Midterm Exam">Problems</a> and <a href="f2021_cv2/midtermsol.pdf"  title="Open Midterm Exam Solution">Solutions</a>.<br> The average was **.** and the maximum score achieved by a student was **.<br>
+- If you think you did not get a score you deserve, you are welcome to dispute. Please do that no later than 18:00 of the day before your final exam day.<br>
+<br>
+ 
+ <br>
 Final Exam: TBA<br>
 
 
