--- a/teaching/f2021_dg2.html
+++ b/teaching/f2021_dg2.html
@@ -55,6 +55,8 @@
 
 
 -->
+2021-11-07: <FONT color="#FF00FF"><b>Midterm exam</b></FONT> details have been modified: It will consist of total 6 questions. The rest of details are the same.<br>  
+2021-11-07: <FONT COLOR="red">Homework #5, #6, #7, #8</FONT> have been posted below.<br>   
 2021-10-11: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> Details have been posted below.<br> 
 2021-10-11: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>  
 2021-10-02: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>  
@@ -82,9 +84,21 @@ Problems from Chapter 9 Part 2: #33, 34, 35, 37, 38, 40.<br>
 Problems from Chapter 9 Part 3: #7, 9, 12, 41, 42, 43.<br>
 <br>
 
- <b>Homework  #4</b> 11 problems. Due Date: October 31st.<br>
+<b>Homework  #4</b> 11 problems. Due Date: October 31st.<br>
 Problems from Chapter 9 Part 4: #10, 21, 22, 44, 48.<br>
 Problems from the National Exam: <a href="f2021_dg2/nationalexam_ch9.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
+
+<b>Homework  #5</b> 7 problems. Due Date: Before the midterm exam.<br> 
+Problems from Chapter 9 Part 5: #26, 27, 45, 46, 47, 52, 55.<br>
+
+<b>Homework  #6</b> 6 problems. Due Date: November 21st.<br>
+Problems from Chapter 10: #3, 8, 9, 10, 30, 38.<br><br> 
+
+<b>Homework  #7</b> 7 problems. Due Date: Before the final exam.<br>
+Problems from Chapter 11: #8, 10, 30, 32, 33, 54, 55.<br><br>
+
+<b>Homework  #8</b> 7 problems. Due Date: Before the final exam.<br>
+Problems from the National Exam: <a href="f2020_dg2/nationalexam_ch11.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
 
  
 <!--
@@ -92,20 +106,6 @@ Problems from the National Exam: <a href="f2021_dg2/nationalexam_ch9.pdf" title=
 
 
 
-
-<b>Homework  #4</b> 11 problems. Due Date: November 2nd.<br>
-Problems from Chapter 9 Part 4: #10, 21, 22, 44, 48.<br>
-Problems from the National Exam: <a href="f2020_dg2/nationalexam_ch9.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
-
-<b>Homework  #5</b> 13 problems. Due Date: November 22nd.<br>
-Problems from Chapter 9 Part 5: #26, 27, 45, 46, 47, 52, 55.<br>
-Problems from Chapter 10: #3, 8, 9, 10, 30, 38.<br><br>
-
-<b>Homework  #6</b> 7 problems. Due Date: Before the final exam.<br>
-Problems from Chapter 11: #8, 10, 30, 32, 33, 54, 55.<br><br>
-
-<b>Homework  #7</b> 7 problems. Due Date: Before the final exam.<br>
-Problems from the National Exam: <a href="f2020_dg2/nationalexam_ch11.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
 
 
 
@@ -125,7 +125,7 @@ Here are problems from Chapter 10: <a href="f2019_dg2/ch10prob.pdf" title="Chapt
 <h2><p>Exam Schedules</p></h2>
 Midterm Exam: <FONT COLOR="#C40062">15 November (Monday),</FONT> In-class.<br>
 - Coverage: Chapters 8 and 9.<br>
-- Total 8 questions. There will be a set of true/false questions. At least 4 problems will be identical or closely related to homework problems.<br><br>
+- Total 6 questions. There will be a set of true/false questions. At least 4 problems will be identical or closely related to homework problems.<br><br>
 Final Exam: TBA<br>
 
 <!--
