--- a/teaching/f2021_cv2.html
+++ b/teaching/f2021_cv2.html
@@ -147,7 +147,7 @@ Here are problems from Chapter 10: <a href="f2019_dg2/ch10prob.pdf" title="Chapt
 Midterm Exam: <FONT COLOR="#C40062">28 October (Thursday),</FONT> In-class.<br>
 - Coverage: Chapters 8 (only those items covered in this semester), 9, 10, 11. Also those relevant old exam problems from the National Exam.<br>
 - Total 8 questions. There will be a set of true/false questions. At least 4 problems will be identical or closely related to homework problems.<br>
-- Here is the <a href="f2021_cv2/midterm.pdf"  title="Open Midterm Exam">Problems</a> and <a href="f2021_cv2/midtermsol.pdf"  title="Open Midterm Exam Solution">Solutions</a>.<br> The average was **.** and the maximum score achieved by a student was **.<br>
+- Here is the <a href="f2021_cv2/midterm.pdf"  title="Open Midterm Exam">Problems</a> and <a href="f2021_cv2/midtermsol.pdf"  title="Open Midterm Exam Solution">Solutions</a>. The average was **.** and the maximum score achieved by a student was **.<br>
 - If you think you did not get a score you deserve, you are welcome to dispute. Please do that no later than 18:00 of the day before your final exam day.<br>
 <br>
  
