--- a/teaching/f2021_dg2.html
+++ b/teaching/f2021_dg2.html
@@ -89,7 +89,7 @@ Problems from Chapter 9 Part 4: #10, 21, 22, 44, 48.<br>
 Problems from the National Exam: <a href="f2021_dg2/nationalexam_ch9.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
 
 <b>Homework  #5</b> 7 problems. Due Date: Before the midterm exam.<br> 
-Problems from Chapter 9 Part 5: #26, 27, 45, 46, 47, 52, 55.<br>
+Problems from Chapter 9 Part 5: #26, 27, 45, 46, 47, 52, 55.<br><br>
 
 <b>Homework  #6</b> 6 problems. Due Date: November 21st.<br>
 Problems from Chapter 10: #3, 8, 9, 10, 30, 38.<br><br> 
