--- a/teaching/f2021_cv2.html
+++ b/teaching/f2021_cv2.html
@@ -42,6 +42,7 @@
 2021-04-05: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
 2021-03-29: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
 -->
+2021-11-16: Midterm exam grading has been completed. Please check your email for relevant announcements.<br>
 2021-11-07: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br> 
 2021-10-28: See eCampus Week 10 Session 28(2) video for solutions to the midterm exam. The exam problems and solutions are also available.<br>  
 2021-10-20: See eCampus Week 10 Session 28(1) video for some information for the upcoming midterm exam.<br> 
@@ -147,7 +148,7 @@ Here are problems from Chapter 10: <a href="f2019_dg2/ch10prob.pdf" title="Chapt
 Midterm Exam: <FONT COLOR="#C40062">28 October (Thursday),</FONT> In-class.<br>
 - Coverage: Chapters 8 (only those items covered in this semester), 9, 10, 11. Also those relevant old exam problems from the National Exam.<br>
 - Total 8 questions. There will be a set of true/false questions. At least 4 problems will be identical or closely related to homework problems.<br>
-- Here is the <a href="f2021_cv2/midterm.pdf"  title="Open Midterm Exam">Problems</a> and <a href="f2021_cv2/midtermsol.pdf"  title="Open Midterm Exam Solution">Solutions</a>. The average was **.** and the maximum score achieved by a student was **. If you think you did not get a score you deserve, you are welcome to dispute. Please do that no later than 18:00 of the day before your final exam day.<br>
+- Here is the <a href="f2021_cv2/midterm.pdf"  title="Open Midterm Exam">Problems</a> and <a href="f2021_cv2/midtermsol.pdf"  title="Open Midterm Exam Solution">Solutions</a>. The average was 58 and the maximum score achieved by a student was 80. If you think you did not get a score you deserve, you are welcome to dispute. Please do that no later than 18:00 of the day before your final exam day.<br>
 <br>
  
  <br>
