--- a/teaching/f2021_dg2.html
+++ b/teaching/f2021_dg2.html
@@ -125,8 +125,13 @@ Here are problems from Chapter 10: <a href="f2019_dg2/ch10prob.pdf" title="Chapt
 <h2><p>Exam Schedules</p></h2>
 Midterm Exam: <FONT COLOR="#C40062">15 November (Monday),</FONT> In-class.<br>
 - Coverage: Chapters 8 and 9.<br>
-- Total 6 questions. There will be a set of true/false questions. At least 4 problems will be identical or closely related to homework problems.<br><br>
-Final Exam: TBA<br>
+- Total 6 questions. There will be a set of true/false questions. At least 4 problems will be identical or closely related to homework problems.<br>
+- The average was 80.71 and the maximum score achieved by a student was 98.<br>
+- If you think you did not get a score you deserve, you are welcome to dispute. Please do that no later than 18:00 of the day before your final exam day.<br><br>
+ 
+ Final Exam: TBA<br>
+ 
+ 
 
 <!--
 Final Exam: <FONT COLOR="#C40062">07 December (Monday),</FONT> at N-7 Room 308, 15:00--16:40.<br>
