--- a/teaching/f2021_cv2.html
+++ b/teaching/f2021_cv2.html
@@ -42,6 +42,8 @@
 2021-04-05: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
 2021-03-29: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
 -->
+2021-11-29: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> Details have been posted below.<br>
+2021-11-29: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br> 
 2021-11-16: Midterm exam grading has been completed. Please check your email for relevant announcements.<br>
 2021-11-07: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br> 
 2021-10-28: See eCampus Week 10 Session 28(2) video for solutions to the midterm exam. The exam problems and solutions are also available.<br>  
@@ -81,9 +83,12 @@ Chapter 12, Exercises in p.167: #2, 4.<br>
 Chapter 13, Exercises in p.192: #3, 9, 11, 12, 13, 14, 15, 16.<br>
 <br>
 
- 
- 
-<!--
+<b>Homework  #6</b> 6 problems. Due Date: Before the final exam.<br>
+Chapter 13, Exercises in p.192: #17, 18, 19.<br>
+Chapter 14, Exercises in p.213: #6, 10.<br> 
+<br> 
+
+ <!--
 
 
  
@@ -151,9 +156,12 @@ Midterm Exam: <FONT COLOR="#C40062">28 October (Thursday),</FONT> In-class.<br>
 - Here is the <a href="f2021_cv2/midterm.pdf"  title="Open Midterm Exam">Problems</a> and <a href="f2021_cv2/midtermsol.pdf"  title="Open Midterm Exam Solution">Solutions</a>. The average was 58 and the maximum score achieved by a student was 80. If you think you did not get a score you deserve, you are welcome to dispute. Please do that no later than 18:00 of the day before your final exam day.<br>
 <br>
  
- <br>
-Final Exam: TBA<br>
-
+Final Exam: <FONT COLOR="#C40062">15 December (Wednesday),</FONT> 15:00--16:40 at E1-1 Room 136.<br>
+- Coverage: Chapters 8 (only those items covered in this semester), 9, 10, 11, 12, 13, 14 (only those items covered in this semester). Also those relevant old exam problems from the National Exam.<br>
+- Total 8 questions. There will be a set of true/false questions. Review session video lecture will be provided.<br>
+<!-- - Here is the <a href="f2021_cv2/final.pdf"  title="Open Final Exam">Problems</a> and <a href="f2021_cv2/finalsol.pdf"  title="Open Final Exam Solution">Solutions</a>. The average was ** and the maximum score achieved by a student was **. If you would like to dispute, please follow the instruction in the email announcement.<br>
+-->
+<br>
 
 <!--
 Final Exam: <FONT COLOR="#C40062">07 December (Monday),</FONT> at N-7 Room 308, 15:00--16:40.<br>
