--- a/teaching/f2021_dg2.html
+++ b/teaching/f2021_dg2.html
@@ -130,8 +130,11 @@ Midterm Exam: <FONT COLOR="#C40062">15 November (Monday),</FONT> In-class.<br>
 - The average was 80.71 and the maximum score achieved by a student was 98.<br>
 - If you think you did not get a score you deserve, you are welcome to dispute. Please do that no later than 18:00 of the day before your final exam day.<br><br>
  
- Final Exam: TBA<br>
- 
+ Final Exam: <FONT COLOR="#C40062">20 December (Monday),</FONT> 16:00--17:40 at E1-1 Room 136.<br>
+- Coverage: Chapters 8, 9, 10, and 11. In Chapters 10 and 11, only those sections we covered in class will be included to the coverage.<br>
+- Total 6 questions. There will be one True/False question (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect.) and some questions will be identical to old National Exam problems.<br><br>
+<br>
+
  
 
 <!--
