--- a/teaching/f2021_dg2.html
+++ b/teaching/f2021_dg2.html
@@ -55,6 +55,7 @@
 
 
 -->
+2021-11-29: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br> 
 2021-11-16: Midterm exam grading has been completed. Please check your email for relevant announcements.<br> 
 2021-11-07: <FONT color="#FF00FF"><b>Midterm exam</b></FONT> details have been modified: It will consist of total 6 questions. The rest of details are the same.<br>  
 2021-11-07: <FONT COLOR="red">Homework #5, #6, #7, #8</FONT> have been posted below.<br>   
