--- a/teaching/f2021_dg2.html
+++ b/teaching/f2021_dg2.html
@@ -55,6 +55,7 @@
 
 
 -->
+2021-11-29: <FONT color="#FF00FF"><b>Final exam date</b></FONT> has been changed to December 13th to avoid issues from the students' dormitory checkout schedule.<br> 
 2021-11-29: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br> 
 2021-11-16: Midterm exam grading has been completed. Please check your email for relevant announcements.<br> 
 2021-11-07: <FONT color="#FF00FF"><b>Midterm exam</b></FONT> details have been modified: It will consist of total 6 questions. The rest of details are the same.<br>  
@@ -131,7 +132,8 @@ Midterm Exam: <FONT COLOR="#C40062">15 November (Monday),</FONT> In-class.<br>
 - The average was 80.71 and the maximum score achieved by a student was 98.<br>
 - If you think you did not get a score you deserve, you are welcome to dispute. Please do that no later than 18:00 of the day before your final exam day.<br><br>
  
- Final Exam: <FONT COLOR="#C40062">20 December (Monday),</FONT> 16:00--17:40 at E1-1 Room 136.<br>
+ Final Exam: <FONT COLOR="#C40062">13 December (Monday),</FONT> 16:00--17:40 at E1-1 Room 136.<br>
+- <b>Please note:</b> change of the exam date from December 20th to December 13th!<br>
 - Coverage: Chapters 8, 9, 10, and 11. In Chapters 10 and 11, only those sections we covered in class will be included to the coverage.<br>
 - Total 6 questions. There will be one True/False question (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect.) and some questions will be identical to old National Exam problems.<br><br>
 <br>
