--- a/teaching/f2021_dg2.html
+++ b/teaching/f2021_dg2.html
@@ -133,7 +133,7 @@ Midterm Exam: <FONT COLOR="#C40062">15 November (Monday),</FONT> In-class.<br>
 - If you think you did not get a score you deserve, you are welcome to dispute. Please do that no later than 18:00 of the day before your final exam day.<br><br>
  
  Final Exam: <FONT COLOR="#C40062">13 December (Monday),</FONT> 16:00--17:40 at E1-1 Room 136.<br>
-- <b>Please note:</b> change of the exam date from December 20th to December 13th!<br>
+- <b>Please note</b> the change of exam date from December 20th to December 13th!<br>
 - Coverage: Chapters 8, 9, 10, and 11. In Chapters 10 and 11, only those sections we covered in class will be included to the coverage.<br>
 - Total 6 questions. There will be one True/False question (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect.) and some questions will be identical to old National Exam problems.<br><br>
 <br>
