--- a/teaching/f2021_cv2.html
+++ b/teaching/f2021_cv2.html
@@ -159,8 +159,8 @@ Midterm Exam: <FONT COLOR="#C40062">28 October (Thursday),</FONT> In-class.<br>
 Final Exam: <FONT COLOR="#C40062">15 December (Wednesday),</FONT> 15:00--16:40 at E1-1 Room 136.<br>
 - Coverage: Chapters 8 (only those items covered in this semester), 9, 10, 11, 12, 13, 14 (only those items covered in this semester). Also those relevant old exam problems from the National Exam.<br>
 - Total 8 questions. There will be a set of true/false questions. Review session video lecture will be provided.<br>
-<!-- - Here is the <a href="f2021_cv2/final.pdf"  title="Open Final Exam">Problems</a> and <a href="f2021_cv2/finalsol.pdf"  title="Open Final Exam Solution">Solutions</a>. The average was ** and the maximum score achieved by a student was **. If you would like to dispute, please follow the instruction in the email announcement.<br>
--->
+- Here are <a href="f2021_cv2/final.pdf"  title="Open Final Exam">Problems</a> and <a href="f2021_cv2/finalsol.pdf"  title="Open Final Exam Solutions">Solutions</a>. The average was ** and the maximum score achieved by a student was **. If you would like to dispute, please follow the instruction in the email announcement.<br>
+
 <br>
 
 <!--
