--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Here is my <a href="CV_Park.pdf">CV</a>. My research is supported by the <a href
 
 <!-- 365 Fifth Ave. CUNY Graduate Center Mathematics Room 4208, New York, NY 10016 -->
 <!-- BE CAREFUL, CASE SENSITIVE about FILE FORMAT -->
-<b>Email:</b> <img src="images/eml_cbnu.jpg" width="302" height="63"><td> <td><br><br>
+<b>Email:</b> <img src="images/eml_gcbnu.jpg" width="291" height="79"><td> <td><br><br>
 
 
 <h2><p>Research Interest</p></h2>
