--- a/teaching/f2021_cv2.html
+++ b/teaching/f2021_cv2.html
@@ -42,6 +42,7 @@
 2021-04-05: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
 2021-03-29: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
 -->
+2021-12-23: Letter grades have been submitted. Happy holidays!<br> 
 2021-11-29: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> Details have been posted below.<br>
 2021-11-29: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br> 
 2021-11-16: Midterm exam grading has been completed. Please check your email for relevant announcements.<br>
