--- a/teaching/f2021_fom2.html
+++ b/teaching/f2021_fom2.html
@@ -42,6 +42,7 @@
 2020-09-03: If you have any issue with CBNU eCampus online attendance system, please report that to me by email by September 5th 18:00.<br>
 
 -->
+2021-12-23: Letter grades have been submitted. Happy holidays!<br> 
 2021-09-05: Here is the criterion for an attendance approval: The learning time must be greater than or equal to the minimum of 50 minutes and the total length of video lectures for that session. Please read the email announcement for more details.<br>  
 2021-09-03: All video lectures have to be watched by December 18th for an attendance approval.<br>
 2021-09-01: Here is an <a href="https://forms.gle/1WvCdyNJ56gHBa6a8">online form</a> for reporting issues and filing objections to the eCampus attendance checking system.<br>
