--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@ Contemp. Math.</a></em> <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/abs
 
 <h2><p>Teaching</p></h2>
 <dl>
-<dd><a href="teaching/f2021_fom2.html">Foundation of Mathematics II</a> (Graduate Course)</dd>
-<dd><a href="teaching/f2021_dg2.html">Differential Geometry II</a></dd>
-<dd><a href="teaching/f2021_cv2.html">Complex Analysis II</a></dd>
+<dd><a href="teaching/s2022_dg1.html">Differential Geometry I</a></dd>
+<dd><a href="teaching/s2022_geom1.html">Geometry for teachers I</a></dd>
+<dd><a href="teaching/s2022_calc1.html">Calculus I</a></dd>  
 </dl>
 <ul>
   <li><a href="teaching/pastcourses.html">Past courses</a></li>
