--- a/seminars/geometry.html
+++ b/seminars/geometry.html
@@ -24,11 +24,14 @@ The Geometry Seminar at the Mathematics Education department, Chungbuk National 
 
 <b>The Organizer:</b> Byungdo Park
 
+<h2><p>Schedule, Year 2022</p></h2>
 
+TBA
+  
 
 <h2><p>Schedule, Year 2021</p></h2>
 
-TBA
+No meeting.
 
 <h2><p>Schedule, Year 2020</p></h2>
 <li>29 October 2020 17:00--18:00 at N7 Room 404<br>
