--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@ Here is my <a href="CV_Park.pdf">CV</a>. My research is supported by the <a href
 
 <!-- 365 Fifth Ave. CUNY Graduate Center Mathematics Room 4208, New York, NY 10016 -->
 <!-- BE CAREFUL, CASE SENSITIVE about FILE FORMAT -->
-<b>Email:</b> <img src="images/eml_gcbnu.jpg" width="291" height="79"><br>
-<b>Alternative email:</b> <img src="images/eml_gmail1.jpg" width="357" height="64"><br><br>
+<b>Email:</b> <img src="images/eml_gcbnu.jpg" width="291" height="79">  <b>Alternative email:</b> <img src="images/eml_gmail1.jpg" width="357" height="64"><br><br>
 
 
 <h2><p>Research Interest</p></h2>
